Fix fighting between skeleton and bootstrap grids
Previously there were some minor layout issues due to both grids
claiming ownership of the "container" and "row" classes. Skeleton sets
container to a fixed width 960px, where bootstrap by default uses a
max-width of 940px. Bootstrap also provides styles for "row", as part of
its grid system.

This disables the generation of grid classes in bootstrap to avoid the
mixed styling of "row". To make use of the bootstrap grids we will be
using mixins.

This changes the max-size of the container in bootstrap to 960px, so
that containers use the existing size defined by skeleton.

--- a/backend/app/assets/stylesheets/spree/backend/_bootstrap_custom.scss
+++ b/backend/app/assets/stylesheets/spree/backend/_bootstrap_custom.scss
@@ -49,7 +49,7 @@ $enable-shadows:            false !default;
 $enable-gradients:          false !default;
 $enable-transitions:        false !default;
 $enable-hover-media-query:  false !default;
-$enable-grid-classes:       true !default;
+$enable-grid-classes:       false !default;
 
 
 // Spacing
@@ -125,7 +125,7 @@ $grid-breakpoints: (
 $container-max-widths: (
   sm: 576px,
   md: 720px,
-  lg: 940px,
+  lg: 960px, /* Changed to 960 from 940 to avoid fighting with skeleton */
   xl: 1140px
 ) !default;
 
